@@ -1,3 +1,6 @@
+2009-03-30
+Redo the watch_list module to only do files in current directory
+
 2009-03-28
 Put duplicate removing in the Scanning check, that way cleanup()s only handle watch and ignored list
 Make a fs_code module
