@@ -102,13 +102,12 @@ class db_archive extends db_file
 			// try to get music information
 			if( count($db_archive) == 0 )
 			{
-				$fileid = self::add($file);
-				return true;
+				return self::add($file);
 			}
 			elseif($force)
 			{
 				$id = self::add($file, $db_archive[0]['id']);
-				return 1;
+				return $db_archive[0]['id'];
 			}
 
 		}
@@ -206,16 +205,7 @@ class db_archive extends db_file
 		$fileinfo['Filedate'] = date("Y-m-d h:i:s", filemtime($last_path));
 
 		// print status
-		if( $archive_id != NULL )
-		{
-			log_error('Modifying archive: ' . $fileinfo['Filepath']);
-			
-			// update database
-			$id = $GLOBALS['database']->query(array('UPDATE' => self::DATABASE, 'VALUES' => $fileinfo, 'WHERE' => 'id=' . $archive_id));
-		
-			return $audio_id;
-		}
-		else
+		if( $archive_id == NULL )
 		{
 			log_error('Adding archive: ' . $fileinfo['Filepath']);
 			
@@ -223,6 +213,15 @@ class db_archive extends db_file
 			$id = $GLOBALS['database']->query(array('INSERT' => self::DATABASE, 'VALUES' => $fileinfo));
 			
 			return $id;
+		}
+		else
+		{
+			log_error('Modifying archive: ' . $fileinfo['Filepath']);
+			
+			// update database
+			$id = $GLOBALS['database']->query(array('UPDATE' => self::DATABASE, 'VALUES' => $fileinfo, 'WHERE' => 'id=' . $archive_id));
+		
+			return $archive_id;
 		}
 		
 	}
