@@ -70,14 +70,17 @@ if($files === false)
 	$error = 'The database returned null!';
 	$files = array();
 }
+
 $order_keys_values = array();
+
 // get all the other information from other modules
 foreach($files as $index => &$file)
 {
 	// replace id with centralized id
 	if(USE_DATABASE)
 	{
-		$ids = db_ids::get(array('file' => $file['Filepath']), &$tmp_count, &$tmp_error);
+		// use the module_id column to look up keys
+		$ids = db_ids::get(array('file' => $file['Filepath'], 'search_' . constant($_REQUEST['cat'] . '::DATABASE') . '_id' => '=' . $file['id'] . '='), &$tmp_count, &$tmp_error);
 		if(count($ids) > 0)
 		{
 			$files[$index] = array_merge($ids[0], $files[$index]);
